kubernetes/hdf/invoice-ninja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invoice-ninja
  namespace: hdf
  labels:
    app.kubernetes.io/name: invoice-ninja
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: invoice-ninja
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
