kubernetes/hdf/invoice-ninja/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invoice-ninja
  namespace: hdf
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`portal.hudsonvilledigital.com`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: invoice-ninja
          port: 80
  tls:
    secretName: invoice-ninja-tls
